# mdict-reader

./: .gitattributes  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/mdict/: blocks.rs  compression.rs  crypto.rs  decoder.rs  error.rs  filetypes.rs  header.rs  iter.rs  key_blocks.rs  mod.rs  models.rs  reader.rs  record_blocks.rs  utils.rs
src/mdict/codec/: compression.rs  crypto.rs  mod.rs
src/mdict/format/: content.rs  header.rs  mod.rs
src/mdict/format/index/: common.rs  mod.rs  v1v2.rs  v3.rs
src/mdict/layout/: blocks.rs  mod.rs
src/mdict/layout/index/: common.rs  v1v2.rs  v3.rs
src/mdict/types/: error.rs  filetypes.rs  mod.rs  models.rs
tests/: fixtures_spec.rs  gbk-2.0.mdd  gbk-2.0.mdx  generate_fixtures.py  utf16-2.0.mdd  utf16-2.0.mdx  utf8-2.0.mdd  utf8-2.0.mdx  utf8-3.0.mdd  utf8-3.0.mdx
tests/fixtures_src/: gbk_keys_varied.txt  stylesheet.txt  utf16_keys_varied.txt  utf16_stylesheet.txt  utf8_keys_varied.txt
tests/fixtures_src/resources/: file.txt
