[package]
name = "mdict-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
adler2 = "2.0.1"
byteorder = "1.5.0"
encoding_rs = "0.8.35"
env_logger = "0.11.8"
flate2 = "1.1.5"
hex = "0.4.3"
log = "0.4.28"
lzokay = "2.0.1"
quick-xml = "0.38.3"
ripemd = "0.1.3"
thiserror = "2.0.17"
twox-hash = "2.1.2"

[[bin]]
name = "mdict-reader"
path = "src/main.rs"
[lib]
name = "mdict_reader"
path = "src/lib.rs"
