[package]
name = "mdict-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
adler2 = "^2"
byteorder = "^1"
clap = { version = "^4.5", features = ["derive"] }
encoding_rs = "^0.8"
env_logger = "^0.11"
flate2 = "^1"
hex = "^0.4"
log = "^0.4"
lzokay = { version = "^2", default-features = false, features = ["decompress"] }
quick-xml = "^0.38"
regex = "^1"
ripemd = "^0.1"
serde_json = "^1"
thiserror = "^2"
twox-hash = { version = "^2", default-features = false, features = ["xxhash64"] }

[[bin]]
name = "mdict-reader"
path = "src/main.rs"
[lib]
name = "mdict_reader"
path = "src/lib.rs"
